2007-12-03  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/main.c: (detect_and_set_singleton), (cleanup_and_exit),
	(main):
	Enable singleton window.
	* daemon/nwam-menuitem.c: (nwam_menu_item_size_request),
	(nwam_menu_item_size_allocate):
	Fixed the position of the last icon.

2007-11-30  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_env_pref_dialog.c: (default_svc_status_cb),
	(default_svc_toggled_cb), (additional_svc_toggled_cb),
	(default_netservices_vfunc), (additional_netservices_vfunc):
	Turn to nwamui_svc.
	* common/Makefile.am:
	* common/libnwamui.h:
	* common/nwamui_env.c: (nwamui_env_init), (nwamui_env_get_svc),
	(nwamui_env_find_svc), (nwamui_env_svc_add),
	(nwamui_env_svc_add_full):
	* common/nwamui_env.h:
	Added a new SVC object to store service information.
	* configure.in:
	Enabled libnwam.

2007-11-29  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/main.c: (main): Disable singleton window.
	* scripts/link_icons.sh: Fixed a nit.

2007-11-27  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ip.c: 
	  Fix typo in property name.
	* common/nwamui_ncu.c:
	  Change storage of addresses and subnets to use gtk_list_store for
	  existing APIs.

2007-11-27  Darren Kenny  <darren.kenny@sun.com>

	* common/Makefile.am, common/libnwamui.h,
	  common/nwamui_ip.c, common/nwamui_ip.h,
	  common/nwamui_ncu.c, common/nwamui_ncu.h:
	  Add a new IP object to store an ip address and subnet/prefix.
	  Add two GtkListStore for v4 and v6 addresses to NCU object, IP objects
	  will be stored in here - not done yet.

2007-11-26  Darren Kenny  <darren.kenny@sun.com>

	* common/Makefile.am, common/nwam_ui_icons.c, common/nwam_ui_icons.h:
	  Removed need for this icon factory, all icons should be retrieved using
	  utility functions in libnwamui.c
	* common/libnwamui.h, common/libnwamui.c: 
	  (get_pixbuf),
	  (nwamui_util_get_env_status_icon),
	  (nwamui_util_get_network_type_icon),
	  (nwamui_util_get_network_security_icon),
	  (nwamui_util_get_network_status_icon),