@@ -1,3 +1,14 @@
+2007-12-10  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* common/nwamui_svc.c: (nwamui_svc_class_init), (nwamui_svc_init),
+	(nwamui_svc_set_property), (nwamui_svc_get_property),
+	(nwamui_svc_finalize), (nwamui_svc_new),
+	(nwamui_svc_get_description), (nwamui_svc_set_status),
+	(nwamui_svc_get_status), (nwamui_svc_get_name),
+	(nwamui_svc_set_default), (nwamui_svc_is_default),
+	(object_notify_cb):
+	* common/nwamui_svc.h: Forgot committing these new files.
+
 2007-12-03  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* daemon/main.c: (detect_and_set_singleton), (cleanup_and_exit),
